gestures.h
@@ -21,6 +21,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #define KWIN_GESTURES_H
 
 #include <QObject>
+#include <QPointF>
+#include <QSizeF>
 #include <QMap>
 #include <QVector>
 
@@ -95,12 +97,86 @@ public:
         m_direction = direction;
     }
 
+    void setMinimumX(int x) {
+        m_minimumX = x;
+        m_minimumXRelevant = true;
+    }
+    int minimumX() const {
+        return m_minimumX;
+    }
+    bool minimumXIsRelevant() const {
+        return m_minimumXRelevant;
+    }
+    void setMinimumY(int y) {
+        m_minimumY = y;
+        m_minimumYRelevant = true;
+    }
+    int minimumY() const {
+        return m_minimumY;
+    }
+    bool minimumYIsRelevant() const {
+        return m_minimumYRelevant;
+    }
+
+    void setMaximumX(int x) {
+        m_maximumX = x;
+        m_maximumXRelevant = true;
+    }
+    int maximumX() const {
+        return m_maximumX;
+    }
+    bool maximumXIsRelevant() const {
+        return m_maximumXRelevant;
+    }
+    void setMaximumY(int y) {
+        m_maximumY = y;
+        m_maximumYRelevant = true;
+    }
+    int maximumY() const {
+        return m_maximumY;
+    }
+    bool maximumYIsRelevant() const {
+        return m_maximumYRelevant;
+    }
+    void setStartGeometry(const QRect &geometry);
+
+    QSizeF minimumDelta() const {
+        return m_minimumDelta;
+    }
+    void setMinimumDelta(const QSizeF &delta) {
+        m_minimumDelta = delta;
+        m_minimumDeltaRelevant = true;
+    }
+    bool isMinimumDeltaRelevant() const {
+        return m_minimumDeltaRelevant;
+    }
+
+    qreal minimumDeltaReachedProgress(const QSizeF &delta) const;
+    bool minimumDeltaReached(const QSizeF &delta) const;
+
+Q_SIGNALS:
+    /**
+     * The progress of the gesture if a @link{minimumDelta} is set.
+     * The progress is reported in [0.0,1.0]
+     **/
+    void progress(qreal);
+
 private:
     bool m_minimumFingerCountRelevant = false;
     uint m_minimumFingerCount = 0;
     bool m_maximumFingerCountRelevant = false;
     uint m_maximumFingerCount = 0;
     Direction m_direction = Direction::Down;
+    bool m_minimumXRelevant = false;
+    int m_minimumX = 0;
+    bool m_minimumYRelevant = false;
+    int m_minimumY = 0;
+    bool m_maximumXRelevant = false;
+    int m_maximumX = 0;
+    bool m_maximumYRelevant = false;
+    int m_maximumY = 0;
+    bool m_minimumDeltaRelevant = false;
+    QSizeF m_minimumDelta;
 };
 
 class GestureRecognizer : public QObject
@@ -113,13 +189,23 @@ public:
     void registerGesture(Gesture *gesture);
     void unregisterGesture(Gesture *gesture);
 
-    void startSwipeGesture(uint fingerCount);
+    int startSwipeGesture(uint fingerCount) {
+        return startSwipeGesture(fingerCount, QPointF(), StartPositionBehavior::Irrelevant);
+    }
+    int startSwipeGesture(const QPointF &startPos) {
+        return startSwipeGesture(1, startPos, StartPositionBehavior::Relevant);
+    }
     void updateSwipeGesture(const QSizeF &delta);
     void cancelSwipeGesture();
     void endSwipeGesture();
 
 private:
     void cancelActiveSwipeGestures();
+    enum class StartPositionBehavior {
+        Relevant,
+        Irrelevant
+    };
+    int startSwipeGesture(uint fingerCount, const QPointF &startPos, StartPositionBehavior startPosBehavior);
     QVector<Gesture*> m_gestures;
     QVector<Gesture*> m_activeSwipeGestures;
     QMap<Gesture*, QMetaObject::Connection> m_destroyConnections;
