plugins/platforms/x11/standalone/edge.h
@@ -50,8 +50,8 @@ public:
 
 protected:
     virtual void doGeometryUpdate();
-    virtual void activate();
-    virtual void deactivate();
+    virtual void doActivate() override;
+    virtual void doDeactivate() override;
     virtual void doStartApproaching();
     virtual void doStopApproaching();
     virtual void doUpdateBlocking();
